# webdiag

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  CHANGELOG.md  README.md  create-webdiag-next-chat-context-v2.ps1  create-webdiag-next-chat-context.ps1  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  requirements-dev.lock.txt  tsconfig.base.json
apps/api/: Dockerfile  pyproject.toml
apps/api/src/webdiag_api/: config.py  main.py  registry.py
apps/api/tests/: test_accessibility_static_tools.py  test_api.py  test_asset_delivery_tools.py  test_audit_api.py  test_audit_fetcher.py  test_audit_html_metadata.py  test_audit_models.py  test_audit_registry_mapping.py  test_audit_report.py  test_audit_robots.py  test_audit_security_headers.py  test_audit_site_resources.py  test_audit_sitemap.py  test_audit_structured_data.py  test_audit_summary.py  test_audit_taxonomy.py  test_audit_url_intake.py  test_canonical_tool.py  test_client_delivery_tools.py  test_content_analysis_tools.py  test_http_status_tool.py  test_image_audit_tools.py  test_link_health_tools.py  test_markup_tools.py  test_network_dns_tools.py  test_network_intelligence_tools.py  test_page_metadata_tools.py  test_performance_tools.py  test_protocol_security_tools.py  test_registry.py  test_robots_txt_tool.py  test_security_headers_tool.py  test_sitemap_xml_tool.py  test_technical_seo_tools.py  test_url_management_tools.py  test_url_policy.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/webdiag_worker/: actors.py  (+1 more)
apps/worker/tests/: test_actor.py
(+348 files in other folders)
