[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "webdiag-api"
version = "0.5.11"
requires-python = ">=3.13,<3.15"
dependencies = [
  "fastapi==0.139.1",
  "httpx==0.28.1",
  "pydantic-settings==2.14.2",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webdiag_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
