[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "webdiag-worker"
version = "0.5.11"
requires-python = ">=3.13,<3.15"
dependencies = ["dramatiq==2.2.0"]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "ruff==0.15.21"]
rabbitmq = ["pika==1.4.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/webdiag_worker"]
